name:                tempuhs
version:             0.0.0
synopsis:            Chronicler
description:         This is the tempuhs chronicler library.
homepage:            https://secure.plaimi.net/works/tempuhs
license:             AGPL-3
license-file:        LICENSE
author:              plaimi
maintainer:          tempuhs@plaimi.net
copyright:           (c) plaimi 2014
category:            Time
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Tempuhs.Chronology
  other-modules:       Tempuhs.Database
                       Tempuhs.Functions
                       Tempuhs.Types
  other-extensions:    FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       QuasiQuotes
                       TemplateHaskell
                       TypeFamilies
  build-depends:       base >=4.6 && <4.8,
                       lens >=4.5 && <4.8,
                       persistent >=1.3 && <2.3,
                       persistent-template >=1.3 && <2.3,
                       plailude >=0.5 && <0.6,
                       text >=1.1 && <1.3,
                       time >=1.4 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
